--- a/my-yt/package.json
+++ b/my-yt/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.3",
     "react": "^18.2.0",
+    "vite": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
